# python-project-lvl2

./: .gitignore  Makefile  README.md  gendiff.py  parser.py  pyproject.toml  setup.cfg  start.py
.github/workflows/: coverage.yml  linter_flake8.yml  pytest.yml  pytest_coverage.yml
engine/: generate_diff.py
formaters/: stylish.py
gendiff/: __init__.py  differ.py  generate_diff.py  parser.py
gendiff/engine/: generate_diff.py
gendiff/formaters/: j_son.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
test/: test_generate_diff.py
tests/: modified_functions.py  test_diff.py  test_generate_diff.py  test_json.py  test_json_full.py  test_json_full_yaml.py  test_plain.py  test_plain_full.py  test_plain_full_yaml.py  test_stylish.py  test_stylish_full.py  test_stylish_full_yaml.py
tests/fixtures/: file_json.txt  file_json_full.txt
